[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/assets/Icons/White/Audio/MusicNotes/music_note_500px.png" type="Texture" id=1]
[ext_resource path="res://src/assets/Fonts/JetBrains/JetBrainsMono-SemiBoldItalic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/Scenes/SubOptions/Artists/ArtistSpace.gd" type="Script" id=3]
[ext_resource path="res://src/Ressources/Themes/Text/Normal.tres" type="StyleBox" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 2 )

[node name="ArtistSpace" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 0.133
margin_bottom = 0.199997
rect_min_size = Vector2( 0, 80 )
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 4 )
script = ExtResource( 3 )

[node name="ArtistButton" type="Button" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 1118.0
margin_bottom = 78.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 1118.0
margin_bottom = 78.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 3

[node name="Artist" type="TextureRect" parent="HBoxContainer"]
margin_top = 3.0
margin_right = 85.0
margin_bottom = 73.0
rect_min_size = Vector2( 85, 70 )
mouse_filter = 2
size_flags_vertical = 4
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Info" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 88.0
margin_right = 1116.0
margin_bottom = 76.0
mouse_filter = 2
size_flags_horizontal = 3
alignment = 1

[node name="Name" type="Label" parent="HBoxContainer/Info"]
margin_top = 21.0
margin_right = 1028.0
margin_bottom = 55.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "Artist Name"
clip_text = true

[node name="Profession" type="Label" parent="HBoxContainer/Info"]
visible = false
margin_top = 40.0
margin_right = 511.0
margin_bottom = 56.0
text = "Producer/Singer/Band"
autowrap = true

[node name="HoldThresholdTimer" type="Timer" parent="."]

[connection signal="button_down" from="ArtistButton" to="." method="_on_ArtistButton_button_down"]
[connection signal="button_up" from="ArtistButton" to="." method="_on_ArtistButton_button_up"]
[connection signal="mouse_entered" from="ArtistButton" to="." method="_on_ArtistSpace_mouse_entered"]
[connection signal="mouse_exited" from="ArtistButton" to="." method="_on_ArtistSpace_mouse_exited"]
